--- a/optimlib.html
+++ b/optimlib.html
@@ -59,8 +59,8 @@
     var image_list = new Array()
     var link_list = new Array()
 
-    image_list[0] = 'pics/sphere_fn.png'
-    image_list[1] = 'pics/table_fn_3d.png'
+    image_list[0] = 'pics/table_fn_3d.png'
+    // image_list[1] = 'pics/sphere_fn.png'
 
     link_list[0] = 'optimlib_docs_bfgs.html#examples'
     link_list[1] = 'optimlib_docs_pso.html#examples'
@@ -78,8 +78,8 @@
     var image_list2 = new Array()
     var link_list2 = new Array()
 
-    image_list2[0] = 'pics/rastrigin_fn.png'
-    image_list2[1] = 'pics/ackley_fn_3d.png'
+    image_list2[0] = 'pics/ackley_fn_3d.png'
+    // image_list2[1] = 'pics/rastrigin_fn.png'
 
     link_list2[0] = 'optimlib_docs_de.html#examples'
 
