--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         <h4><i class="fa fa-terminal fa-2x fa-fw"></i> Code 
                         <span style="float:right;">
                             <a href="https://github.com/kthohr" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a>
+                            <a href="https://gitlab.com/kthohr" target="_blank"><i class="fa fa-gitlab fa-2x" style="color:black"></i></a>
                             <a href="https://bitbucket.org/kthohr/" target="_blank"><i class="fa fa-bitbucket fa-2x" style="color:black"></i></a>
                         </span></h4>
                     </div>
