update GCEM docs

--- a/gcem_docs_basic_factorial.html
+++ b/gcem_docs_basic_factorial.html
@@ -94,7 +94,7 @@ constexpr int factorial(const int x)
 
 <h3 style="text-align: left;"><strong style="font-size: 100%;">Details:</strong></h3>
 
-<p>Computes $n!$.</p>
+<p>Computes $x!$.</p>
 
     </div>
 
