--- a/gcem_docs_basic_max.html
+++ b/gcem_docs_basic_max.html
@@ -95,7 +95,7 @@ constexpr T max(const T x, const T y)
 
 <h3 style="text-align: left;"><strong style="font-size: 100%;">Details:</strong></h3>
 
-<p>Computes the maximum between $x$ and $y$, where $x$ and $y$ are of the same type (int, double, long double, etc.).</p>
+<p>Computes the maximum between $x$ and $y$, where $x$ and $y$ are of the same type (<code>int</code>, <code>double</code>, <code>long double</code>, etc.).</p>
 
     </div>
 
