--- a/gcem_header.html
+++ b/gcem_header.html
@@ -4,53 +4,13 @@
             <li><a href="https://www.kthohr.com">Home</a></li>
             <li><a href="gcem.html">GCE-Math</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Basic Functions <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="gcem_docs_basic_exp.html">exp</a></li>
-                    <li><a href="gcem_docs_basic_log.html">log</a></li>
+                    <li><a href="gcem_docs_basic.html">Basic functions</a></li>
                     <li class="divider"></li>
-                    <li><a href="gcem_docs_basic_abs.html">abs</a></li>
-                    <li><a href="gcem_docs_basic_factorial.html">factorial</a></li>
-                    <li><a href="gcem_docs_basic_max.html">max</a></li>
-                    <li><a href="gcem_docs_basic_min.html">min</a></li>
-                    <li><a href="gcem_docs_basic_pow.html">pow</a></li>
-                    <li><a href="gcem_docs_basic_sqrt.html">sqrt</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Special Functions <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="gcem_docs_sf_beta.html">beta</a></li>
-                    <li><a href="gcem_docs_sf_gamma.html">gamma</a></li>
-                    <li><a href="gcem_docs_sf_multi_gamma.html">multi_gamma</a></li>
+                    <li><a href="gcem_docs_special.html">Special functions</a></li>
                     <li class="divider"></li>
-                    <li><a href="gcem_docs_sf_erf.html">erf</a></li>
-                    <li><a href="gcem_docs_sf_incomplete_beta.html">incomplete_beta</a></li>
-                    <li><a href="gcem_docs_sf_incomplete_gamma.html">incomplete_gamma</a></li>
-                    <li class="divider"></li>
-                    <li><a href="gcem_docs_sf_erf_inv.html">erf_inv</a></li>
-                    <li><a href="gcem_docs_sf_incomplete_beta_inv.html">incomplete_beta_inv</a></li>
-                    <li><a href="gcem_docs_sf_incomplete_gamma_inv.html">incomplete_gamma_inv</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Trigonometric Functions <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="gcem_docs_tf_cos.html">cos</a></li>
-                    <li><a href="gcem_docs_tf_sin.html">sin</a></li>
-                    <li><a href="gcem_docs_tf_tan.html">tan</a></li>
-                    <li class="divider"></li>
-                    <li><a href="gcem_docs_tf_acos.html">acos</a></li>
-                    <li><a href="gcem_docs_tf_asin.html">asin</a></li>
-                    <li><a href="gcem_docs_tf_atan.html">atan</a></li>
-                    <li class="divider"></li>
-                    <li><a href="gcem_docs_tf_cosh.html">cosh</a></li>
-                    <li><a href="gcem_docs_tf_sinh.html">sinh</a></li>
-                    <li><a href="gcem_docs_tf_tanh.html">tanh</a></li>
-                    <li class="divider"></li>
-                    <li><a href="gcem_docs_tf_acosh.html">acosh</a></li>
-                    <li><a href="gcem_docs_tf_asinh.html">asinh</a></li>
-                    <li><a href="gcem_docs_tf_atanh.html">atanh</a></li>
+                    <li><a href="gcem_docs_trig.html">Trigonometric functions</a></li>
                 </ul>
             </li>
         </ol>
