--- a/optimlib_header.html
+++ b/optimlib_header.html
@@ -9,9 +9,11 @@
                     <li><a href="optimlib_docs_bfgs.html">BFGS</a></li>
                     <li><a href="optimlib_docs_lbfgs.html">L-BFGS</a></li>
                     <li><a href="optimlib_docs_cg.html">Conjugate Gradient</a></li>
-                    <li><a href="optimlib_docs_de.html">Differential Evolution</a></li>
+                    <li><a href="optimlib_docs_gd.html">Gradient Descent</a></li>
                     <li><a href="optimlib_docs_nm.html">Nelder-Mead</a></li>
-                    <li><a href="optimlib_docs_pso.html">Particle Swarm</a></li>
+                    <li class="divider"></li>
+                    <li><a href="optimlib_docs_de.html">Differential Evolution</a></li>
+                    <li><a href="optimlib_docs_pso.html">Particle Swarm Optimization</a></li>
                     <li class="divider"></li>
                     <li><a href="optimlib_docs_broyden.html">Broyden</a></li>
                     <li class="divider"></li>
