--- a/optimlib_docs_bfgs.html
+++ b/optimlib_docs_bfgs.html
@@ -160,7 +160,7 @@ $$x_{i+1} = x_i + \alpha_{i} d_{i}$$
 $$\alpha_i = \arg \min_\alpha f(x_i + \alpha d_i)$$
 <p>The line search method used in OptimLib is that of More and Thuente (1994).</p>
 
-<p>The algorithm stops when $\| \nabla f \|$ is less than err_tol, or the total number of iterations exceeds a desired (or default) value.</p>
+<p>The algorithm stops when $\| \nabla f \|$ is less than <code>err_tol</code>, or the total number of iterations exceeds <code>iter_max</code>.</p>
 
 <hr style="height:2px;border-width:0;background-color:black">
 
