--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -170,7 +170,7 @@ bool de(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
     $$X_{i+1} (j,:) = \begin{cases} X_c^*(j,:) & \text{ if } f(X_c^*(j)) < f(X_i(j)) \\ X_i (j) & \text{ else } \end{cases}$$
 </ul>
 
-<p>The algorithm stops when the relative improvement in the objective function is less than <code>err_tol</code> between <code>de_check_freq</code> number of generations, or when the total number of 'generations' exceeds a desired (or default) value.</p>
+<p>The algorithm stops when the relative improvement in the objective function is less than <code>err_tol</code> between <code>de_check_freq</code> number of generations, or when the total number of 'generations' exceeds <code>n_gen</code>.</p>
 
 <hr>
 
