--- a/optimlib_docs_settings.html
+++ b/optimlib_docs_settings.html
@@ -88,6 +88,32 @@ pre {
 
 <p><strong>Struct definition:</strong></p>
 <pre class="brush: cpp;">
+struct gd_settings_t
+{
+    // step size, or 'learning rate'
+    double step_size = 0.1;
+
+    // decay
+    bool step_decay = false;
+
+    uint_t step_decay_periods = 10;
+    double step_decay_val = 0.5;
+
+    // momentum parameter
+    double momentum_par = 0.9;
+
+    // Ada parameters
+    double norm_term = 10e-08;
+
+    double ada_rho = 0.9;
+
+    bool ada_max = false;
+
+    // Adam parameters
+    double adam_beta_1 = 0.9;
+    double adam_beta_2 = 0.999;
+};
+
 struct algo_settings_t
 {
     // general
@@ -137,6 +163,13 @@ struct algo_settings_t
 
     arma::vec de_initial_lb; // this will default to -0.5
     arma::vec de_initial_ub; // this will default to  0.5
+
+    // GD
+    int gd_method = 0;
+    gd_settings_t gd_settings;
+
+    // L-BFGS
+    int lbfgs_par_M = 10;
 
     // Nelder-Mead
     bool nm_adaptive= true;
