--- a/statslib.html
+++ b/statslib.html
@@ -82,10 +82,11 @@ pre {
 
 
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-2 hidden-xs">
         <img src="pics/stats_pnorm.png" class="img-responsive center-block">
     </div>
-    <div class="col-md-8">
+    <div class="col-md-4">
         <br>
         <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>StatsLib</u></strong></h3>
          <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/stats" target="_blank"><img src="https://travis-ci.org/kthohr/stats.svg?branch=master" alt="StatsLib Build"></a> 
@@ -100,6 +101,12 @@ pre {
 </div>
 
 <br>
+
+<div class="row">
+
+            <div class="col-md-2"></div>
+
+            <div class="col-md-8">
 
 <!-- <p>StatsLib is a templated C++ library for random variable generation and fast computation of statistical distribution functions.</p> -->
 <p>StatsLib is a templated C++ library for fast computation of statistical distribution functions.</p>
@@ -189,6 +196,8 @@ git clone -b master --single-branch https://github.com/kthohr/stats ./stats
 cd ./stats/tests
 ./cov_setup</pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
