--- a/optimlib_docs_bfgs.html
+++ b/optimlib_docs_bfgs.html
@@ -86,7 +86,10 @@ pre {
 <!-- <hr> -->
 <br>
 
+<!--  -->
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -102,6 +105,12 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>The Broyden–Fletcher–Goldfarb–Shanno (<a href="https://en.wikipedia.org/wiki/Broyden%E2%80%93Fletcher%E2%80%93Goldfarb%E2%80%93Shanno_algorithm" target="_blank">BFGS</a>) algorithm is a quasi-Newton method for convex optimization.</p>
 
@@ -262,6 +271,8 @@ int main()
 }
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
