--- a/optimlib_docs_broyden.html
+++ b/optimlib_docs_broyden.html
@@ -83,7 +83,10 @@ pre {
 
 <br>
 
+<!--  -->
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +102,12 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>Broyden's method for solving systems of nonlinear equations.</p>
 
@@ -305,6 +314,8 @@ int main()
 }
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
