--- a/optimlib_docs_lbfgs.html
+++ b/optimlib_docs_lbfgs.html
@@ -81,12 +81,12 @@ pre {
         <!-- Page Heading/Breadcrumbs -->
         <div id="optimhead"></div>
 
-<!-- <h3 style="text-align: left;"><strong style="font-size: 120%;">OptimLib: BFGS</strong></h3> -->
-
-<!-- <hr> -->
 <br>
 
+<!--  -->
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -102,6 +102,12 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>The limited memeory BFGS (L-BFGS) algorithm is a quasi-Newton method for convex optimization.</p>
 
@@ -273,6 +279,8 @@ int main()
 }
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
