--- a/optimlib_docs_nm.html
+++ b/optimlib_docs_nm.html
@@ -83,7 +83,10 @@ pre {
 
 <br>
 
+<!--  -->
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +102,12 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>Nelder-Mead is a derivative-free simplex method.</p>
 
@@ -169,6 +178,8 @@ bool nm(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
         Go to Step 1.</li>
 </ul>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
