--- a/optimlib_docs_pso.html
+++ b/optimlib_docs_pso.html
@@ -83,7 +83,10 @@ pre {
 
 <br>
 
+<!--  -->
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-5">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +102,12 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>Particle Swarm Optimization (PSO) is a stochastic swarm intelligence algorithm for global optimization of potentially ill-behaved nonlinear functions.</p>
 
@@ -290,7 +299,9 @@ int main()
 }
 </pre>
 
-</div>
+    </div>
+    </div>
+    </div>
 
     <div id="myfooter"></div>
 
