--- a/optimlib_docs_settings.html
+++ b/optimlib_docs_settings.html
@@ -81,10 +81,15 @@ pre {
         <!-- Page Heading/Breadcrumbs -->
         <div id="optimhead"></div>
 
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
 <h3 style="text-align: left;"><strong style="font-size: 120%;">OptimLib: Algorithm Settings</strong></h3>
 
 <hr>
-<!--<p> &nbsp </p>-->
 
 <p><strong>Struct definition:</strong></p>
 <pre class="brush: cpp;">
@@ -208,6 +213,8 @@ struct algo_settings_t
 };
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
