--- a/optimlib_docs_sumt.html
+++ b/optimlib_docs_sumt.html
@@ -81,6 +81,10 @@ pre {
         <!-- Page Heading/Breadcrumbs -->
         <div id="optimhead"></div>
 
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
 <h3 style="text-align: left;"><strong style="font-size: 120%;">OptimLib: Sequential Unconstrained Minimization Technique (SUMT)</strong></h3>
 
 <hr>
@@ -137,6 +141,8 @@ $$\min_x \left\{ f(x) + c \times \dfrac{1}{2} \sum_{k=1}^K \left( \max(0, g_k(x)
 <p>The algorithm stops when $\| \nabla h \|$ is less than err_tol, or the total number of 'generations' exceeds a desired (or default) value.</p>
 
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
