--- a/optimlib.html
+++ b/optimlib.html
@@ -106,7 +106,8 @@
         <div id="optimhead"></div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-1"></div>
+    <div class="col-md-3">
          <!-- <a href="optimlib_docs_pso.html#examples" target="_blank"><img src="pics/table_fn_3d.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>  -->
         <script>showImage();</script>
     </div>
@@ -121,7 +122,7 @@
         <a class="github-button" href="https://github.com/kthohr/optim" data-icon="octicon-star" data-count-href="/kthohr/optim/stargazers" data-count-api="/repos/kthohr/optim#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star kthohr/optim on GitHub">Star</a>
         <a class="github-button" href="https://github.com/kthohr/optim/fork" data-icon="octicon-repo-forked" data-count-href="/kthohr/optim/network" data-count-api="/repos/kthohr/optim#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork kthohr/optim on GitHub">Fork</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
         <!-- <a href="optimlib_docs_de.html#examples" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a> -->
@@ -130,6 +131,12 @@
 </div>
 
 <br>
+
+<div class="row">
+
+            <div class="col-md-2"></div>
+
+            <div class="col-md-8">
 
 <p>OptimLib is a lightweight C++ library of numerical optimization methods for nonlinear functions.</p>
 
@@ -198,6 +205,10 @@ export ARMA_INCLUDE_PATH=/path/to/armadillo</pre>
 
 Otherwise the build script will download the required files from the Armadillo GitLab repository.
 
+<hr>
+
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
