--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -83,7 +83,10 @@ pre {
 
 <br>
 
+<!--  -->
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +102,12 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>Differential Evolution (DE) is a stochastic genetic search algorithm for global optimization of potentially ill-behaved nonlinear functions.</p>
 
@@ -330,6 +339,8 @@ int main()
 }
 </pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
