--- a/optimlib_docs_gd.html
+++ b/optimlib_docs_gd.html
@@ -83,7 +83,10 @@ pre {
 
 <br>
 
+<!--  -->
+
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -99,6 +102,12 @@ pre {
         </div>
     </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>The Gradient Descent (GD) method and its many varieties.</p>
 
@@ -344,6 +353,8 @@ newton: true values vs estimates:
    2.2465   2.3064
 }</pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
