--- a/gcem.html
+++ b/gcem.html
@@ -74,11 +74,12 @@ pre {
         <div id="gcemhead"></div>
 
 <div class="row">
+    <div class="col-md-1"></div>
     <div class="col-md-2 hidden-xs">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <img src="pics/gcem_log.png" class="img-responsive center-block">
     </div>
-    <div class="col-md-8">
+    <div class="col-md-6">
         <br>
         <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Generalized Constant Expression Math</u></strong></h3>
          <!-- <p style="text-align: center;"><a href="https://github.com/kthohr/gcem" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></p>  -->
@@ -96,6 +97,13 @@ pre {
 </div>
 
 <br>
+
+<!--  -->
+
+<div class="row">
+
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
 
 <p>GCE-Math (generalized constant expression math, or <strong>gcem</strong>) is a templated C++ library for compile-time computation of mathematical functions.</p>
 
@@ -214,6 +222,8 @@ cd ./gcem/tests
 make
 ./run_tests</pre>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
