--- a/gcem_docs_basic.html
+++ b/gcem_docs_basic.html
@@ -83,6 +83,11 @@ pre {
 
 <!--  -->
 
+<div class="row">
+
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
 <hr>
 <!--<p> &nbsp </p>-->
 
@@ -192,6 +197,8 @@ constexpr return_t&lt;T&gt sqrt(const T x)
 
 <!--  -->
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
