--- a/gcem_docs_special.html
+++ b/gcem_docs_special.html
@@ -83,6 +83,11 @@ pre {
 
 <!--  -->
 
+<div class="row">
+
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
 <hr>
 
 <h3 style="text-align: left;"><strong style="font-size: 120%;">beta, lbeta</strong></h3>
@@ -250,6 +255,8 @@ constexpr return_t&lt;eT&gt log_multi_gamma(const pT a, const eT p)
 $$\Gamma_p(a) = \pi^{(p-1)/2} \Gamma(a) \Gamma_{p-1}(a-0.5)$$
 <p>where $\Gamma_1(a) = \Gamma(a)$.</p>
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
