--- a/gcem_docs_trig.html
+++ b/gcem_docs_trig.html
@@ -83,6 +83,11 @@ pre {
 
 <!--  -->
 
+<div class="row">
+
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+
 <hr>
 
 <h3 style="text-align: left;"><strong style="font-size: 120%;">acos</strong></h3>
@@ -249,6 +254,8 @@ constexpr return_t&lt;T&gt tanh(const T x)
 <p>Computes the hyperbolic tangent function $\text{tanh}(x)$ for real-valued $x$, using the continued fraction representation</p>
 $$ \tanh(x) = \dfrac{x}{1 + \dfrac{x^2}{3 + \dfrac{x^2}{5 + \dfrac{x^2}{7 + \ddots}}}}$$
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
