--- a/r-mac-source.html
+++ b/r-mac-source.html
@@ -75,11 +75,12 @@
 
 
 <div class="row">
+    <div class="col-md-2"></div>
     <div class="col-md-2 hidden-xs">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <a href="https://www.r-project.org/" target="_blank"><img src="pics/Rlogo.png" class="img-responsive center-block"></a>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-6">
         <br>
         <h3 style="text-align: center;"><strong style="font-size: 130%;">Building R-devel from Source</strong></h3>
         <h3 style="text-align: center;"><strong style="font-size: 130%;">macOS 10.13.2</strong></h3>
@@ -88,7 +89,10 @@
 
 </br>
 
+<!--  -->
+
 <div class="row">
+<div class="col-md-1"></div>
 <div class="col-md-4">
     <div class="panel panel-default">
     <div class="panel-body">
@@ -103,6 +107,13 @@
     </div>
 </div>
 </div>
+
+<!--  -->
+
+<div class="row">
+
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
 
 <p>This page describes the steps involved in compiling R-devel on a Mac operating system (macOS, formerly known as OS X), with an emphasis on non-standard build configurations that can significantly improve computing times versus the standard R build.</p>
 
@@ -344,6 +355,8 @@ export RSTUDIO_WHICH_R=/where/I/installed/to/bin/R
 open -n -a RStudio</pre>
 
 
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
