--- a/trame.html
+++ b/trame.html
@@ -76,11 +76,12 @@
         <!-- /.row -->
 
 <div class="row">
+    <div class="col-md-1"></div>
     <div class="col-md-2">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <a href="https://en.wikipedia.org/wiki/Gaspard_Monge" target="_blank"><img src="pics/trame_monge.png" class="img-responsive center-block" alt="" width="150" height="150"></a>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-6">
         <br>
         <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Transportation Methods for Econometrics</u></strong></h3>
         <p style="text-align: center;"><a href="https://travis-ci.org/TraME-Project/TraME" target="_blank"><img src="https://travis-ci.org/TraME-Project/TraME.svg?branch=master" alt="TraME Build"></a>
@@ -95,6 +96,13 @@
 </div>        
 
 <br>
+
+<!--  -->
+
+<div class="row">
+
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
 
 <p>TraME (<b><i>Tra</i></b>nsportation <b><i>M</i></b>ethods for <b><i>E</i></b>conometrics) is a templated C++ library for solving problems of equilibrium computation and estimation in consumer demand and matching frameworks via the Mass Transportation Approach.</p>
 
@@ -162,14 +170,29 @@ make install</pre>
 
 <p>Configure options:</p>
 <ul>
-    <li><code>-b dev</code> a 'development' build with install names set to the build directory (as opposed to an install path)</li>
-    <li><code>-c</code> a coverage build</li>
+    <li><code>-c</code> a coverage build (used with Codecov)</li>
+    <li><code>-d</code> a 'development' build</li>
+    <li><code>-g</code> a debugging build (optimization flags set to <code>-O0 -g</code>)</li>
+    <li><code>-h</code> print help</li>
+    <li><code>-i</code> install path; default: the build directory</li>
     <li><code>-l</code> specify a linear programming library to use; for example <code>-l glpk</code> or <code>-l gurobi</code></li>
-    <li><code>-m</code> specify the BLAS and Lapack libraries to link against; for example, <code>-m "-lopenblas"</code></li>
-    <li><code>-o</code> enable aggressive compiler optimization features: <code>-o fast</code> or <code>-o native</code></li>
-    <li><code>-p</code> enable parallelization features (using OpenMP)</li>
+    <li><code>-m</code> specify the BLAS and Lapack libraries to link against; for example, <code>-m "-lopenblas"</code> or -m "-framework Accelerate"</li>
+    <li><code>-o</code> compiler optimization options; defaults to <code>-O3 -march=native -ffp-contract=fast -flto -DARMA_NO_DEBUG</code>
+    <li><code>-p</code> enable OpenMP parallelization features (recommended)</li>
 </ul>
 
+<hr>
+
+<h4 style="text-align: left;"><strong style="font-size: 95%;">Armadillo</strong></h3>
+
+TraME is built on the Armadillo C++ linear algebra library. The <code>configure</code> script will search for Armadillo files in the usual places: <code>/usr/include</code>, <code>/usr/local/include</code>, <code>/opt/include</code>, <code>/opt/local/include</code>. If the Armadillo header files are installed elsewhere, set the following environment variable <strong>before</strong> running <code>configure</code>:
+<pre class="brush: bash;">
+export ARMA_INCLUDE_PATH=/path/to/armadillo</pre>
+
+Otherwise the build script will download the required files from the Armadillo GitLab repository.
+
+    </div>
+    </div>
     </div>
 
     <div id="myfooter"></div>
